# star-rail-tools

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  activate.ps1  build.ps1  build.rs  build.spec  build_d.spec  build_f.spec  main.spec  main_d.spec  main_f.spec  nuitka.ps1  pyproject.toml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  other.yml
.github/workflows/: lint.yml  linter.yml  pre-release.yml  release.yml  test.yml
db-helper/: Cargo.toml
db-helper/db-helper-derive/: Cargo.toml
db-helper/db-helper-derive/src/: lib.rs
db-helper/src/: lib.rs
docs/: README.md  README_EN.md
i18n/: Cargo.toml  build.rs  srt-translations.toml  translations.toml
i18n/src/: lib.rs
src/: app.rs  config.rs  db.rs  event.rs  lib.rs  main.rs  utils.rs
srt/: Cargo.toml
srt/src/: config.rs  error.rs  lib.rs  logger.rs  updater.rs  utils.rs
srt/src/core/: account.rs  app_status.rs  game_biz.rs  mod.rs
srt/src/core/gacha/: entity.rs  export_service.rs  fetcher.rs  gacha_service.rs  gacha_url.rs  import_service.rs  metadata.rs  mod.rs  types.rs  uigf.rs
srt/src/database/: db_service.rs  mod.rs
srt/src/database/repositories/: account_repo.rs  app_state_repo.rs  app_status_repo.rs  config_repo.rs  gacha_repo.rs  metadata_repo.rs  mod.rs
star_rail/: __init__.py  __main__.py  client.py  config.py  constant.py  constants.py  exceptions.py  logger.py  main.py  utils.py  version.py
star_rail/config/: __init__.py  client.py  default_settings.toml  settings.py
star_rail/core/: __init__.py  async_request.py  base_model.py  db_client.py
star_rail/core/paginator/: __init__.py  api.py  base.py
star_rail/database/: __init__.py  client.py  database.py  db_client.py  sqlite.py  upgrade_sql.py
star_rail/i18n/: __init__.py  en_us.py  zh_cn.py
star_rail/module/: __init__.py  about.py  account.py  api_helper.py  base.py  clipboard.py  game_client.py  header.py  info.py  kvstore.py  menu.py  routes.py  types.py  update.py  updater.py  user.py
star_rail/module/account/: __init__.py  account.py  client.py  converter.py  cookie.py  mapper.py  model.py  repository.py
star_rail/module/gacha/: __init__.py  gacha_data.py  gacha_log.py  gacha_url.py  metadata.py  model.py  srgf.py
star_rail/module/helper/: __init__.py  header.py  request.py
star_rail/module/helper/paginator/: api.py  base.py
star_rail/module/metadata/: __init__.py  base.py  hakush.py
star_rail/module/mihoyo/: __init__.py  account.py  api_client.py  client.py  converter.py  cookie.py  header.py  mapper.py  model.py  routes.py  types.py
star_rail/module/month/: __init__.py  client.py  converter.py  mapper.py  model.py  month.py  month_data.py
star_rail/module/record/: __init__.py  api.py  client.py  converter.py  entity.py  fetcher.py  gacha_record.py  gacha_url.py  mapper.py  model.py  record.py  repository.py  srgf.py  types.py  uigf.py
star_rail/module/record/metadata/: base.py  hakush.py
star_rail/module/web/: __init__.py  request.py
star_rail/network/: __init__.py  request.py
star_rail/network/paginator/: __init__.py  api.py  base.py
star_rail/tui/: __init__.py  _account.py  _export.py  _footer.py  _help.py  _home.py  _import.py  _record.py  app.py  events.py  handler.py  style.tcss
star_rail/tui/pages/: __init__.py  account.py  account_list.py  account_manager.py  config.py  help.py  month.py  record.py  sidebar.py  status_bar.py
star_rail/tui/screens/: __init__.py  create_account.py  delete_account.py  export.py  export_json.py  notification_detail.py
star_rail/tui/tcss/: account.tcss  account_list.tcss  account_manager.tcss  app.tcss  config.tcss  create_account.tcss  delete_account.tcss  export.tcss  export_json.tcss  footer.tcss  help.tcss  month.tcss  notification.tcss  notification_detail.tcss  record.tcss  sidebar.tcss  status_bar.tcss  widgets.tcss
star_rail/tui/views/: __init__.py  account_list.py  config.py  help.py  month.py  record.py  sidebar.py  status_bar.py
star_rail/tui/widgets/: __init__.py  _account.py  _config.py  _footer.py  _help.py  _import.py  _month.py  _record.py  _refresh.py  _sidebar.py  button.py  notification.py  rich_text.py
star_rail/utils/: clipboard.py  console.py  date.py  file.py  functional.py  info.py  log.py  logger.py  menu.py  security.py  secutity.py  time.py  version.py
tests/: conftest.py
tests/config/: test_settings.py
tests/database/: test_database.py
tests/mihoyo/: test_client.py  test_cookie.py  test_header.py
tests/module/: test_api_helper.py  test_updater.py
tests/module/account/: test_account.py  test_cookie.py
tests/module/mihoyo/: test_account.py  test_client.py  test_cookie.py
tests/utils/: test_version.py
tui/: Cargo.toml  build.rs
tui/src/: action.rs  app.rs  events.rs  main.rs  notification.rs  task.rs  worker.rs
tui/src/component/: account.rs  footer.rs  help.rs  home.rs  import_export.rs  mod.rs  refresh.rs  setting.rs
