[workspace]
members = [".", "db-helper"]

[workspace.package]
edition = "2024"
authors = ["Charlie Brown <cntvc@outlook.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/cntvc/star-rail-tools"

[package]
name = "srt"
version = "3.0.0"
description = "Honkai: Star Rail Tools"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true

[[bin]]
name = "StarRailTools"
path = "src/main.rs"
doc = false

[dependencies]
ratatui = "0.29.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
rusqlite = { version = "0.36.0", features = ["bundled"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
anyhow = "1.0.98"
regex = "1.11.1"
time = { version = "0.3.41", features = ["formatting", "macros"] }
toml = "0.8.23"
futures = "0.3.31"
db-helper = { path = "db-helper" }

[build-dependencies]
winresource = "0.1.12"

[dev-dependencies]


[profile.dev]
incremental = false
