[project]
name = "star-rail-tools"
dynamic = ["version"]
description = "Honkai: Star Rail Toolkit"
authors = [{ name = "Charlie Brown", email = "cntvc@outlook.com" }]
maintainers = [{ name = "Charlie Brown", email = "cntvc@outlook.com" }]
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.11,<3.13" # # pyinstaller requires ">=3.11,<3.13"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "aiohttp>=3.11.12",
    "aiosqlite>=0.20.1",
    "xlsxwriter>=3.2.2",
    "textual>=2.1.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


# PDM ====================================================================================

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["star_rail"]

[tool.pdm.version]
source = "file"
path = "star_rail/__init__.py"

[dependency-groups]
lint = ["ruff>=0.9.7", "pre-commit>=4.1.0"]
dev = ["textual-dev>=1.7.0"]
release = ["pyinstaller>=6.12.0"]

[tool.pdm.scripts]
lint = "pre-commit run --all-files"
release_d = "pyinstaller --clean ./build_d.spec --noconfirm"
release_f = "pyinstaller --clean ./build_f.spec --noconfirm"


# Ruff ================================================================================

[tool.ruff]
line-length = 100
fix = true
src = ["star_rail", "tests"]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "W",   # pycodestyle
    "C90", # mccabe
]
extend-ignore = [
    "B024", # Abstract base class has no abstract methods
    "B028", # No explicit `stacklevel` keyword argument found
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # unused import.
    "F403", # cannot detect unused vars if we use starred import
    "F405", # may be undefined, or defined from star imports
    "E402", # module level import not at top of file
]

[tool.ruff.lint.isort]
known-first-party = ["star_rail"]

[tool.ruff.lint.mccabe]
max-complexity = 10
