[package]
name = "tui"
description = "Honkai: Star Rail Tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7.18"
unicode-width = "0.2.2"
srt = { path = "../srt" }
i18n = { path = "../i18n" }

[build-dependencies]
winresource = "0.1.28"

[[bin]]
name = "StarRailTools"
path = "src/main.rs"
